apps/monitoring/alertmanager/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager-main
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx-internal
    certmanager.k8s.io/cluster-issuer: "internal"
    prometheus.io/probe: "true"
spec:
  tls:
  - hosts:
    - alertmanager.k8s.grigri
    secretName: alertmanager-tls
  rules:
  - host: alertmanager.k8s.grigri
    http:
      paths:
      - path: /
        backend:
          serviceName: alertmanager-main
          servicePort: web
